--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 python-telegram-bot = {version="^20.8",extras=["callback-data","job-queue"]}
+thread = "^1.1.1"
 
 
 
